<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
	<string name="test_version">01) Version Situation</string>
 	<string name="Calibration_test">02) Calibration Test</string>
	<string name="lcd_test">03) LCD Test</string>
	<string name="brightness_test">04) Backlit screen test</string>
	<string name="PhoneTest">05) PhoneTest</string>
    <string name="Audio">06) Speaker Test</string>
    <string name="audioloop_test">07) AudioLoop Test</string>
    <string name="Camera">08) Camera Test</string>
    <string name="FrontCamera">09) Front Camera Test</string>
	<string name="flash_test">10) Flash Test</string>
    <string name="vibrate_test">11) Vibrate Test</string>
    <string name="sdcard_test">12) MemoryCard Test</string>
    <string name="SimTest">13) SIM Test</string>
    <string name="gsensor_test">14) G Sensor Test</string>
    <string name="Sensor">15) P L Sensor Test</string>
	<string name="gyroscope_sensor_test">16) Gyroscope test</string>
    <string name="Compass">17) Compass test</string>
    <string name="rtc_test">18) RTC test</string>
    <string name="earpiece_test">19) Earpiece Test</string>
    <string name="earpiece_audioloop_test">20) Headphone audio circuit test</string>
    <string name="battery_test">21) Battery Test</string>
    <string name="MutiTouchTest">22) MutiTouchTest</string>
    <string name="keypad_test">23) Keypad Test</string>
    <string name="bluetooth_test">24) Bluetooth Test</string>
    <string name="Wireless">25) WiFi Test</string>
    <string name="gps_test">26) GPS test</string>
    <string name="Lens">27) Lens Test</string>
    <string name="CMMB_test">28) CMMB test</string>
    <string name="AudioTunning">29) Audio Tunning</string>
    <string name="LcdTunning">30) LCD Tunning</string>
    <string name="TmuTunning">31) Thermal Tunning</string>
    <string name="testmode_lable">TestMode</string>
    <string name="app_pcbatestmode">PCBA Test Mode</string>
    <string name="app_testmode">Test Mode</string>
    <string name="GSensor">G Sensor</string>
    <string name="PSensor">P Sensor</string>
    <string name="Wifi">WiFi Test</string>
    <string name="Bluetooth">Bluetooth Test</string>
    <string name="start">start</string>
    <string name="stopped">stopped</string>
    <string name="play">play</string>
    <string name="stop">stop</string>
    <string name="record">record</string>
    <string name="playMusic">play music</string>
    <string name="plugin">Earpiece plugin</string>
    <string name="unplugin">Earpiece unplugin</string>
    <string name="earkey">Earpiece key respond</string>
    <string name="Test_ing">Testing ... </string>
    <string name="FindDevice">		Find bluetooth device:<xliff:g id="BT_Device">%s</xliff:g>		"</string>
    <string name="NoDevice">No bluetooth device found! </string>
    <string name="MAC">		Current bluetooth MAC:<xliff:g id="BT_MAC">%s</xliff:g>		"</string>
    <string name="NoMAC">Current MAC address is DEFAULT value!!</string>
    <string name="Test_Pass">Pass! </string>
    <string name="Test_Fail">Fail!! </string>
    <string name="Test_NT">No Test </string>
    <string name="EP_INSERT_A">Earpiece insert test</string>
    <string name="EP_KEY_A">Earpiece key test</string>
    <string name="EP_INSERT">		"Earpiece insert test<xliff:g id="PassOrFail">%s</xliff:g>		"</string>
    <string name="EP_KEY">		"Earpiece key test<xliff:g id="PassOrFail">%s</xliff:g>		"</string>
    <string name="DialogMessage">Pass this test? </string>
    <string name="Button_Yes">Yes </string>
    <string name="Button_No">No </string>
    <string name="VolUp">Vol + </string>
    <string name="VolDown">Vol - </string>
    <string name="Rayhov">Rayhov </string>
    <string name="Home">Home </string>
    <string name="Menu">Menu </string>
    <string name="Back">Back </string>
    <string name="Search">Search </string>
    <string name="end">Test end</string>
    <string name="playing">playing...</string>
    <string name="recording">recording...</string>
    <string name="VideoTest">720p video play test</string>
    <string name="MissingFile">file not exist</string>
    <string name="sdcard_size">Memory card capacity :</string>
    <string name="no_sdcard">No Memory card !</string>
    <string name="sdcard2_size">SDCard Size :</string>
    <string name="no_sdcard2">No SDCard !</string>
    <string name="sdcard2_exit">SDCard Existence</string>
    <string name="hardware_version">HardWare Version : </string>
    <string name="firmware_version">FirmWare Version : </string>
    <string name="software_version">SoftWare Version : </string>
    <string name="baseband_version">BaseBand Version : </string>
    <string name="kernal_version">Kernal Version : </string>
    <string name="set_success">Time Set Success !</string>
    <string name="alarm_set">Alarm Set</string>
    <string name="led_test">LED Test</string>
    <string name="alarm_test">RTC Test</string>
    <string name="time_to">RTC Test Pass</string>
    <string name="alarm_test_fail">RTC Test Fail</string>
    <string name="alarm_test_warn">Tips: Click the button for 5 seconds after the RTC automatic timing</string>
    <string name="FindWlan">"Find wlan net : </string>
    <string name="NoWlan">Not find wlan net！</string>
    <string name="battery_info_status_unknown">unknown</string>
    <string name="battery_info_status_charging">Charging</string>
    <string name="battery_info_status_charging_ac">（AC）</string>
    <string name="battery_info_status_charging_usb">"(USB)"</string>
    <string name="battery_info_status_discharging">Insert the charger</string>
    <string name="battery_info_status_not_charging">Not charging</string>
    <string name="battery_info_status_full">full and need to discharge</string>
    <string name="battery_info_power_unplugged">is not plugged in</string>
    <string name="battery_info_power_ac">AC</string>
    <string name="battery_info_power_usb">USB</string>
    <string name="battery_info_power_ac_usb">AC + USB</string>
    <string name="battery_info_power_unknown">unknown</string>
    <string name="CalibrationFailed">Calibration Test Failed!!!</string>
    <string name="CalibrationPassed">Calibration Test Passed!!!</string>
    <string name="ADCCalibrationTest">32) ADC Calibration Test</string>
    <string name="GSMCalibrationTest">GSM Calibration Test</string>
    <string name="TDCalibrationTest">TD Calibration Test</string>
    <string name="CalibrationBPBatteryFailed">failed to fetch Battery Info from BP</string>
    <string name="CalibrationBatteryFailed">Failed，voltage should between 3.75v-3.85v</string>
    <string name="app_check_testmode">Check Test Mode</string>
    <string name="testmode_check1">Serial No</string>
    <string name="testmode_check2">IMEI No</string>
    <string name="testmode_check3">ADC Calibration</string>
    <string name="testmode_check4">GSM900 Calibration</string>
    <string name="testmode_check5">DCS1800 Calibration</string>
    <string name="testmode_check6">PCS1900 Calibration</string>
    <string name="testmode_check7">TD1.9G Calibration</string>
    <string name="testmode_check8">TD2.0G Calibration</string>
    <string name="testmode_check9">PCBA Test Result</string>
    <string name="testmode_check10">TestMode Result</string>
    <string name="Calibrationed">Calibrationed</string>
    <string name="NotCalibrationed">Not Calibrationed</string>
    <string name="testmode_check11">Touch Lens Version</string>
    <string name="testmode_check12">Touch Lens Calibration Result</string>
    <string name="lense_factory_version">Lens Factory Version:</string>
    <string name="lense_config_version">Lens Config Version:</string>
    <string name="lense_firmware_version">Lense Firmware Version:</string>
    <string name="updating_title">Fetching Data </string>
    <string name="reading_settings">please wait: </string>
    <string name="FM_test">FM test</string>
    <string name="preinstall_name">Test frequency(KHz):</string>
    <string name="preinstall_value">98500</string>
    <string name="test_all_lable">Test All</string>
    <string name="test_single_lable">Test Single</string>
    <string name="test_result_lable">Test Result</string>
    <string name="oritention_sensor_test">oritention sensor test</string>
    <string name="osensor_orien">"Orientation is "</string>
    <string name="Gyroscope">Gyroscope Sensor</string>
    <string name="sim_card_0_result">SIM card test result</string>
    <string name="phone_call_test">PhoneTest</string>
    <string name="tip_for_psensor">Please to your hand to block the sensor, the middle white icon turns red, test, test success</string>
    <string name="proximity_sensor_test">proximity Light sensor test</string>
    <string name="psensor_msg_status">PSensor Status :</string>
    <string name="psensor_msg_data">PROX_DATA =</string>
    <string name="psensor_msg_value">Value :</string>
    <string name="TestResultTitleString">Factory Test Result(All Succeed)</string>
    <string name="TestResultTitleStringFail">Factory Test Result(Fail)</string>
    <string name="test_result_ID_title">ID</string>
    <string name="test_result_case_title">Test Case</string>
    <string name="test_result_result_title">Result</string>
    <string name="system_test_title">System</string>
    <string name="display_test_title">Screen</string>
    <string name="text_pass">Pass</string>
    <string name="text_fail">Fail</string>
    <string name="TestResultTitle">Factory Test Result</string>
    <string name="clear_status">Recover</string>
    <string name="alert_dialog_ok">Yes</string>
    <string name="alert_dialog_cancel">No</string>
    <string name="cleardata">Cleardata</string>
    <string name="test_result_title">Test Result</string>
    <string name="test_fail">function not test</string>
    <string name="test_not_pass">function test not pass</string>
    <string name="P_data_j">Close to</string>
    <string name="P_data_y">Far away</string>
    <string name="psensor_dizhao_title">Background noise :</string>
    <string name="rtc_tag">System time\n</string>
    <string name="flash_mode_test">click shut down automatically 3 seconds after\n</string>
    <string name="psensor_dizhao_wait">Background noise is not good equipment</string>
    <string name="exit_single_touch_test">once more will exit singlepointTouch test</string>
    <string name="success">success</string>
    <string name="fail">fail</string>
    <string name="ensure_after_success">please ensure after success</string>
	<string name="battery_info">Battery Info</string>
	<string name="battery_info_health">Health Status</string>
	<string name="battery_info_maximum_battery_level">Maximum Battery Level</string>
	<string name="battery_info_current_battery_level">Current Battery Level</string>
	<string name="battery_info_battery_temperature">Battery Temperature</string>
	<string name="battery_info_battery_voltage">Battery Voltage</string>
	<string name="battery_info_battery_technology">Battery Technology</string>
	<string name="playback_scene_btn">Playback</string>
	<string name="record_scene_btn">Record</string>
	<string name="voice_scene_btn">Voice Call</string>
	<string name="bt_scene_btn">BT Call</string>
	<string name="fm_scene_btn">FM</string>
	<string name="spk_vol">SPK Volume Bar</string>
	<string name="hp_vol">HP Volume Bar</string>
	<string name="ep_vol">EP Volume Bar</string>
	<string name="eq_band1">Band1</string>
	<string name="eq_band2">Band2</string>
	<string name="eq_band3">Band3</string>
	<string name="eq_band4">Band4</string>
	<string name="eq_band5">Band5</string>
	<string name="import_filter_btn">import filter</string>
	<string name="voice_call_test_btn">dial</string>
	<string name="forever_btn">forever</string>
	<string name="tz_name">TZ Name</string>
	<string name="number_of_trip">Number of Trip</string>
	<string name="pa">pa</string>
	<string name="NULL">NULL</string>
	<string name="tmu_set">Set</string>
	<string name="tmu_reboot">Reboot</string>
</resources>