<?xml version="1.0" encoding="utf-8"?>  
	<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
		android:orientation="vertical"
		android:layout_width="fill_parent"
		android:layout_height="fill_parent">
		<LinearLayout 
			android:id="@+id/LinearLayout01"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:orientation="horizontal">
			<TextView 
				android:id="@+id/Lens_Test"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"               
				android:text="@string/Lens"
				android:textSize="36sp"
				android:textColor="@color/black"
				android:background="@color/white"  
				android:onClick="onClick"  
				android:clickable="true"/>
		</LinearLayout> 
		
		<LinearLayout 
			android:id="@+id/LinearLayout02"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:orientation="horizontal">
			<TextView 
				android:id="@+id/Sensor_Test"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"               
				android:text="@string/Sensor"
				android:textSize="36sp"
				android:textColor="@color/white"
				android:background="@color/black"   
				android:onClick="onClick"                
				android:clickable="true"/>
		</LinearLayout> 
		
		<LinearLayout 
			android:id="@+id/LinearLayout03"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:orientation="horizontal">
			<TextView 
				android:id="@+id/Audio_Test"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"               
				android:text="@string/Audio"
				android:textSize="36sp"
				android:textColor="@color/black"
				android:background="@color/white"  
				android:onClick="onClick"  
				android:clickable="true"/>
		</LinearLayout> 
		
		<LinearLayout 
			android:id="@+id/LinearLayout04"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:orientation="horizontal">
			<TextView 
				android:id="@+id/Wireless_Test"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"               
				android:text="@string/Wireless"
				android:textSize="36sp"
				android:textColor="@color/white"
				android:background="@color/black"   
				android:onClick="onClick"                
				android:clickable="true"/>
		</LinearLayout> 
		
		<LinearLayout 
			android:id="@+id/LinearLayout05"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:orientation="horizontal">
			<TextView 
				android:id="@+id/Camera_Test"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"               
				android:text="@string/Camera"
				android:textSize="36sp"
				android:textColor="@color/black"
				android:background="@color/white"  
				android:onClick="onClick"  
				android:clickable="true"/>
		</LinearLayout> 
	</LinearLayout> 
